--- a/Index.html
+++ b/Index.html
@@ -1,1 +1,11 @@
-<meta http-equiv="refresh" content="delay_time; URL=www.google.com" />
+<!DOCTYPE html>
+<html>
+    <head>
+        <title>Welcome</title>
+     <meta charset="UTF-8" />
+     <meta http-equiv="refresh" content="3; URL=https://www.google.com/" />
+   </head>
+   <body>
+     
+   </body>
+</html>
