--- a/Index.html
+++ b/Index.html
@@ -3,7 +3,7 @@
     <head>
         <title>Welcome</title>
      <meta charset="UTF-8" />
-     <meta http-equiv="refresh" content="3; URL=https://www.google.com/" />
+     <meta http-equiv="refresh" content="3; URL=https://www.sofy.com.tw/zh-tw/home.html" />
    </head>
    <body>
      
