--- a/Index.html
+++ b/Index.html
@@ -3,7 +3,7 @@
     <head>
         <title>Welcome</title>
      <meta charset="UTF-8" />
-     <meta http-equiv="refresh" content="0.1; URL=https://www.sofy.com.tw/zh-tw/home.html" />
+     <meta http-equiv="refresh" content="0.1; URL=https://youtu.be/kJuPwv-1fv0" />
    </head>
    <body>
      
